--- a/Frontend/frontend_pr2/src/index.css
+++ b/Frontend/frontend_pr2/src/index.css
@@ -144,10 +144,152 @@ input[type="text"] {
   border-radius: 10px; /* Redondea las esquinas del input */
 }
 
+input[type="password"] {
+  flex-grow: 3;
+  margin-right: 10px;
+  font-size: 20px;
+  border: 2px solid rgb(234, 232, 228); /* Añade un borde naranja */
+  padding: 5px; /* Añade un poco de espaciado alrededor del texto */
+  border-radius: 10px; /* Redondea las esquinas del input */
+}
+
 button {
   flex-grow: 1;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%; /* Asegura que el botón se estire para llenar el contenedor */
+}
+
+
+.neon-button {
+  position: relative;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+  color: #0ff;
+  font-size: 24px;
+  letter-spacing: 4px;
+  padding: 15px 50px;
+  overflow: hidden;
+  textShadow: '0 0 3px #0ff, 0 0 6px #0ff';
+  transition: 'transform 0.3s ease-in-out';
+}
+
+.neon-button span {
+  position: absolute;
+}
+
+.neon-button span:nth-child(1),
+.neon-button span:nth-child(3) {
+  bottom: 0;
+  left: -100%;
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(90deg, transparent, #0ff);
+}
+
+.neon-button span:nth-child(2),
+.neon-button span:nth-child(4) {
+  bottom: -100%;
+  right: 0;
+  width: 1px;
+  height: 100%;
+  background: linear-gradient(0deg, transparent, #0ff);
+}
+
+.neon-button:hover {
+  color: #000;
+  box-shadow: 0 0 10px #0ff, 0 0 40px #0ff, 0 0 80px #0ff;
+  background: #0ff;
+  transition-delay: 1s;
+}
+
+.neon-button:hover span:nth-child(1) {
+  animation: leftLine .5s linear 0s;
+}
+
+.neon-button:hover span:nth-child(2) {
+  animation: bottomLine .5s linear .25s;
+}
+
+.neon-button:hover span:nth-child(3) {
+  animation: rightLine .5s linear 0s;
+}
+
+.neon-button:hover span:nth-child(4) {
+  animation: topLine .5s linear .25s;
+}
+
+@keyframes topLine {
+  0% {
+    top: -100%;
+  }
+  100% {
+    top: 100%;
+  }
+}
+
+@keyframes bottomLine {
+  0% {
+    bottom: -100%;
+  }
+  100% {
+    bottom: 100%;
+  }
+}
+
+@keyframes rightLine {
+  0% {
+    right: -100%;
+  }
+  100% {
+    right: 100%;
+  }
+}
+
+@keyframes leftLine {
+  0% {
+    left: -100%;
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+.neon-form {
+  position: relative;
+  padding: 20px;
+  border: 3px solid #0ff;
+  overflow: hidden;
+}
+
+.neon-form:before,
+.neon-form:after {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background: linear-gradient(45deg, transparent, #0ff, transparent);
+  width: 100%;
+  height: 100%;
+  transform: scaleX(1);
+  transform-origin: left;
+  transition: transform 0.5s ease-in-out;
+}
+
+.neon-form:after {
+  transform: scaleY(1);
+  transform-origin: bottom;
+  transition-delay: 0.3s;
+}
+
+.neon-form:hover:before,
+.neon-form:hover:after {
+  transform: scaleX(0);
+}
+
+.neon-form:hover:after {
+  transform: scaleY(0);
 }
